--- a/public/static/aupt.html
+++ b/public/static/aupt.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <meta name="csrf-token" content="D7TEndUIXpO1g6ldNTImXO6pYtxrEWy4yazj1EAX">
+    <meta name="csrf-token" content="ThuLxvt0esUu64LQArCpZfSmIqitHlxDTrDSPoOF">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/images/fav/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/images/fav/favicon-32x32.png">
@@ -38,7 +38,7 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:image:src" content="http://ooo-ermakomsk.ru/images/og_main.jpg">
 
-    <link rel="stylesheet" href="/css/app.css?id=f6eaf7355a11a2a7e27b">
+    <link rel="stylesheet" href="/css/app.css?id=9b8737396071d9edfb49">
 
     <title>Системы пожаротушения в Омске | ЕРМАК</title>
     
@@ -62,19 +62,19 @@
 
     <header id="site-header">
         <div class="container">
-            <div class="row">
+            <div class="row match-bg">
                 <div class="col-md-3 col-sm-8 col-xs-8">
                     <a href="/index.html" rel="home">
                         <img src="images/logo2.png" alt="Ермак: Системы безопастности" style="height:100px">
                     </a>
                 </div>
-                <div class="col-md-3 col-sm-4 col-xs-4" style="text-align: right; font-size: 1.5em; padding: 30px 0;">
+                <div class="col-md-3 col-sm-4 col-xs-4" style="text-align: center; font-size: 1.3em; padding: 30px 0;">
                     <a href="mailto:ooo_emailomsk@mail.ru">ooo_emailomsk@mail.ru</a>
                 </div>
-                <div class="col-md-3 col-sm-4 col-xs-4" style="text-align: right; font-size: 1.5em; padding: 30px 0;">
+                <div class="col-md-3 col-sm-4 col-xs-4" style="text-align: center; font-size: 1.3em; padding: 30px 0;">
                     +7 983 623 3677
                 </div>
-                <div class="col-md-3 col-sm-4 col-xs-4" style="text-align: right; font-size: 1.5em; padding: 30px 0;">
+                <div class="col-md-3 col-sm-4 col-xs-4" style="text-align: center; font-size: 1.3em; padding: 30px 0;">
                     +7 900 675 1882
                 </div>
             </div>
@@ -131,7 +131,7 @@
             </div>
             <div class="col-3">
                 <img src="images/aupt9.jpg" alt="" style="width:100%">
-                <p style="text-align: center;"><strong>Аэрозольное пожаротушение</strong></p>
+                <p style="text-align: center;"><strong>Порошковое пожаротушение</strong></p>
             </div>
             <div class="col-3">
                 <img src="images/aupt4.jpg" alt="" style="width:100%">
@@ -146,7 +146,7 @@
             
             <div class="col-3">
                 <img src="images/aupt10.jpg" alt="" style="width: 255px;height: 173px;">
-                <p style="text-align: center;"><strong>Система газового пожаротушения</strong></p>
+                <p style="text-align: center;"><strong>Аэрозольное пожаротушение</strong></p>
             </div>
             <div class="col-3">
                 <img src="images/aupt7.jpg" alt="" style="width:100%">
@@ -316,7 +316,7 @@
                 <div>
                     <img src="images/serv_pic10.jpg" alt="">
                     <div>
-                        Подготовки оборудования и трубопроводов к отопительному сезону
+                        Подготовка оборудования и трубопроводов к отопительному сезону
                     </div>
                 </div>
             </a>
@@ -426,7 +426,7 @@
 </div>
 
 <!-- Optional JavaScript -->
-<script src="/js/app.js?id=db2db0fab55d4d975db5"></script>
+<script src="/js/app.js?id=3996e1c1357b04a4d9dd"></script>
 
 </body>
 </html>
